@@ -1,3 +1,8 @@
+Development Portal (2020-02-11 shi)
+==============================
+Update css for transaction, budget and planned disbursement tables
+
+
 Development Portal (2020-02-10 shi)
 ==============================
 Display transaction charts
